# ComfyUI-quadMoons-nodes

./: .gitmodules  LICENSE  README.md  __init__.py  changeBackground.py  clipTextEncoder.py  conditionals.py  converters.py  createBatchFromLatent.py  pyproject.toml  samplers.py  smartnodes.py  theButton.py
.github/workflows/: publish.yml
efficiency_nodes/: __init__.py  efficiency_nodes.py  node_settings.json  tsc_utils.py
efficiency_nodes/py/: bnk_adv_encode.py  bnk_tiled_samplers.py  cg_mixed_seed_noise.py  city96_latent_upscaler.py  smZ_cfg_denoiser.py  smZ_rng_source.py  ttl_nn_latent_upscaler.py
js/: clipTextEncoder.js  samplers.js  theButton.js
