[project]
name = "comfyui-quadmoons-nodes"
description = "These are just some nodes I wanted and couldn't find where anyone else had made them yet."
version = "1.2.0"


[project.urls]
Repository = "https://github.com/traugdor/ComfyUI-quadMoons-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "traugdor"
DisplayName = "ComfyUI-quadMoons-nodes"
Icon = ""
